--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -42,6 +42,16 @@ messages:
   no-argument: '&cArgument does not exist!'
   no-arena: '&cThere is no map with this ID!'
 
+  # Level, etc.
+  player-reward-exp: '&a+%AMOUNT% Exp'
+  player-level-up: "&a&l❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚\n&r\n                    &f&lStop It Slender           \n&r\n\n                        &3&lLevel Up!
+                         \n   &7You are getting better and better!\n     &7Thanks for playing this game!\n      &7Your current level: &b%LEVEL%\n&r\n&a&l❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚"
+
+  # My profile menu
+  my-profile-menu-title: 'My Profile'
+  my-profile-stats-item-name: '&bYour Stats'
+  my-profile-stats-item-lore: "&7Wins: &b%WINS%\n&r\n&7Level: &b%LEVEL%\n&7Exp: &b%EXP%\n&r\n&7Collected Pages: &b%COLLECTED_PAGES%\n&r\n&7Killed Survivors: &b%KILLED_SURVIVORS%\n&7Killed SlenderMen: &b%KILLED_SLENDERMEN%\n&7Total Kills: &b%TOTAL_KILLS%"
+
   # Spectator menu
   spectator-menu-title: 'Spectator Settings'
   spectator-no-speed: '&cNo Speed'
