--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -36,6 +36,11 @@ messages:
   survivors-spawn-add-successfully: '&aYou added Survivors spawn location!'
   pages-spawn-add-successfully: '&aYou added pages spawn location!'
   saved-arena-settings-successfully: '&aYou saved arena settings!'
+  force-start-game-successfully: '&aSuccessfully forced to start the game!'
+  force-start-game-unsuccessfully: "&cCouldn't force to start the game!"
+  force-stop-game-successfully: '&aSuccessfully forced to stop the game!'
+  force-stop-game-unsuccessfully: "&cCouldn't force to stop the game!"
+  force-restart-game-successfully: '&aSuccessfully forced to restart the game!'
 
   no-available-arenas: '&cThere is no available arena!'
   no-permission: '&cYou do not have permission to do this!'
@@ -47,10 +52,22 @@ messages:
   player-level-up: "&a&l❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚\n&r\n                    &f&lStop It Slender           \n&r\n\n                        &3&lLevel Up!
                          \n   &7You are getting better and better!\n     &7Thanks for playing this game!\n      &7Your current level: &b%LEVEL%\n&r\n&a&l❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚❚"
 
+  status-on: '&aOn'
+  status-off: '&cOff'
+
   # My profile menu
   my-profile-menu-title: 'My Profile'
   my-profile-stats-item-name: '&bYour Stats'
   my-profile-stats-item-lore: "&7Wins: &b%WINS%\n&r\n&7Level: &b%LEVEL%\n&7Exp: &b%EXP%\n&r\n&7Collected Pages: &b%COLLECTED_PAGES%\n&r\n&7Killed Survivors: &b%KILLED_SURVIVORS%\n&7Killed SlenderMen: &b%KILLED_SLENDERMEN%\n&7Total Kills: &b%TOTAL_KILLS%"
+  my-profile-settings-item-name: '&bSettings'
+  my-profile-settings-item-lore: "\n&7Click here to change your settings!"
+  my-profile-settings-auto-join-mode-name: '&bAuto Join Mode'
+  my-profile-settings-auto-join-mode-lore: "\n&7If this option is on,\n&7you will be teleported to another\n&7arena, after your game ends.\n&7\n&7Status: %STATUS%"
+  my-profile-settings-show-arena-join-message-name: '&bShow Arena Join Message'
+  my-profile-settings-show-arena-join-message-lore: "\n&7If this option is on,\n&7you will get information about Stop It Slender game\n&7\n&7Status: %STATUS%"
+  my-profile-settings-messages-type-name: '&bMessages Type'
+  my-profile-settings-messages-type-lore: "\n&7This option enables you to\nchoose, which messages you will be getting.\n&7\n&7Type: %TYPE%"
+  my-profile-back-name: '&cBack'
 
   # Spectator menu
   spectator-menu-title: 'Spectator Settings'
@@ -74,3 +91,10 @@ messages:
   editor-menu-add-pages-spawn-lore: "\n&7Click to add pages spawn location"
   editor-menu-save-all: '&bSave Settings'
   editor-menu-save-all-lore: "\n&7Click to save settings"
+
+  # Admin menu
+  admin-menu-title: 'Admin Menu'
+  admin-menu-force-start-game: '&aForce Start'
+  admin-menu-force-stop-game: '&aForce Stop'
+  admin-menu-force-restart-game: '&aForce Restart'
+  admin-menu-set-lobby-location: '&aSet Lobby'
