--- a/src/main/resources/items.yml
+++ b/src/main/resources/items.yml
@@ -1,26 +1,36 @@
 items:
   arena-selector:
-    DisplayName: '&a&lArena Selector'
+    DisplayName: '&aArena Selector &7(Right-click)'
     Lore:
       - ''
       - '&eRight-click to open &a&lArena Selector'
   leave:
-    DisplayName: '&c&lLeave'
+    DisplayName: '&cLeave &7(Right-click)'
     Lore:
       - ''
       - '&eRight-click to leave arena.'
   profile:
-    DisplayName: '&b&lMy Profile'
+    DisplayName: '&aMy Profile &7(Right-click)'
     Lore:
       - ''
       - '&eRight-click to open &b&lMy Profile'
   play-again:
-    DisplayName: '&a&lPlay Again'
+    DisplayName: '&aPlay Again &7(Right-click)'
     Lore:
       - ''
       - '&eRight-click to &b&lPlay Again'
+  party-menu:
+    DisplayName: '&bParty Menu &7(Right-click)'
+    Lore:
+      - ''
+      - '&eRight-click to open &bParty Menu'
+  perks:
+    DisplayName: '&dPerks &7(Right-click)'
+    Lore:
+      - ''
+      - '&eRight-click to open &dPerks'
   spectator-settings:
-    DisplayName: "&bSpectator Settings"
+    DisplayName: "&bSpectator Settings &7(Right-click)"
     Lore:
       - ''
       - '&eRight-click to open &bSpectator Settings'
